examples/neg/nomain.check
examples/neg/nomain.effekt:1:1:error: No main function defined
module nomain
^
